# aws-creds-to-tfvars

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  crate-publish.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/tests/: cli.rs
cli/tests/resources/: sample-aws-credentials  valid.tfvars  valid_region_name_override.tfvars
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
