[package]
name = "actfv"
version = "0.1.0"
edition = "2021"
authors = ["kenneth.s.brooks@gmail.com"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "2"
file_diff = "1.0.0"
