[package]
name = "actfv"
version = "0.3.0"
edition = "2021"
authors = ["kenneth.s.brooks@gmail.com"]
license = "MIT OR Apache-2.0"
description = "Take `.aws/credentials` as input and write it into a Terraform compatible `.tfvars` file."
repository = "https://github.com/zendril/aws-creds-to-tfvars/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
notify = "6.0.0"
notify-debouncer-full = "0.1.0"

[dev-dependencies]
assert_cmd = "2"
file_diff = "1.0.0"
